--- a/styles.css
+++ b/styles.css
@@ -2,12 +2,16 @@ h1 {
   font-family: "Satisfy", cursive;
 }
 
+a:hover {
+  cursor: pointer;
+}
+
 .bold {
   font-weight: bold;
 }
 
 #carrito {
-  vertical-align: middle;
+  cursor: pointer;
 }
 
 .card img {
